mule-user-guide/v/3.7/mule-credentials-vault.adoc
=  Mule凭证库
:keywords: anypoint studio, credentials, encryption, properties

使用*Mule Credentials Vault*加密`.properties`文件中的数据。 （在本文档中，我们将`.properties`文件简称为属性文件。）

Mule中的属性文件将数据存储为键值对，其中可能包含诸如用户名，名和姓以及信用卡号等信息。 Mule应用程序可以在处理消息时访问此数据，例如，获取外部Web服务的登录凭证。但是，尽管这些敏感的私人数据必须存储在一个供Mule访问的属性文件中，但它也必须受到保护，以防止任何有权访问Mule应用程序的人员进行未经授权的和可能的恶意使用。你如何保护属性文件中的数据，同时仍然可以将它提供给Mule？

你可以使用这三种成分：

.  *Mule Credentials Vault*
.  {全局{1}}元件
.  *Key*解锁保险柜

[NOTE]
====
在Anypoint Enterprise Security环境中，存储加密属性的属性文件称为*Mule Credentials Vault*。

另请注意，本文档中的_uniquepassword_值指的是在应用程序运行时使用您的应用程序的用户提供的唯一密码。
====

== 它是如何工作的

想象一下，您需要为人力资源部门设计一个Mule应用程序，该应用程序必须访问私人员工信息的安全数据库。 HR员工 -  Mule应用程序的授权最终用户 - 提交信息请求，例如员工的基本工资，而Mule应用程序必须访问安全数据库才能检索信息。如果没有有效的登录凭据，则无法访问此HR数据库，因此您需要设计Mule应用程序来访问数据库，但保留数据库登录凭据的机密性。

首先，您需要设计应用程序来处理HR最终用户请求，其中包括对安全数据库的调用。然后创建一个*Mule Credentials Vault*来存储数据库登录凭证或属性。在Anypoint Enterprise Security环境中，存储加密属性的属性文件是凭证保险库。将数据添加到属性文件时，Mule会为您提供加密数据的选项。然后选择一种加密算法（可用的19种），并输入加密密钥。该加密密钥是解密属性文件中属性的唯一方法。换句话说，加密密钥是解锁凭证保险库的唯一方法。

接下来，创建一个查找凭证保险库（即属性文件）的全局*Secure Property Placeholder*元素，并检索加密的属性。但是，如果安全属性占位符拥有密钥，则它只能访问凭证保险库（即解密数据）。

现在，您拥有保管库中的数据和用于请求数据的机制，但解锁Vault（即解密数据）的密钥在哪里？你如何确保每个访问应用程序的人都无法访问密钥？如果您只是将密钥硬编码到全局安全属性占位符的配置中，则任何有权访问该应用程序的同事都可以读取密钥并解锁该保管库。因此，您需要配置安全属性占位符以使用Mule在运行时从用户收集的密钥（请参阅下面的代码）。在此情况下，解密属性的密钥将成为运行时密码。

[source, xml]
----
<secure-property-placeholder:config key="${prod.key}" location="test.${env}.properties"/>
----

在运行时（也就是说，当您在本地或云中运行Mule应用程序时），Mule要求用户（例如操作管理员）输入一个密钥，该密钥将存储在内存中。回想一下，Mule在运行时要求的密钥是_same key_，用于加密凭证保险库中的属性;在这种情况下，您必须手动将密钥提供给负责运行应用程序的人员，例如Ops Admin。只要Mule应用程序中的安全属性占位符必须解锁凭证保险库以检索HR数据库登录凭据，它才会使用Ops Admin在运行时输入的密钥。方便的话，Mule会记住Ops Admin会话期间的密钥，以避免每次Mule在Vault中解密一个属性时都需要密钥。但是，当Ops Admin结束Mule会话（即终止应用程序）时，Mule会丢弃该密钥。


要配置Mule以要求用户在运行时输入密码密钥，您需要在系统属性（`src/main/app`文件夹中的`mule-app.properties`文件）中包含以下内容：

[source, code]
----
-M-Dprod.key=uniquepassword -M-Denv=prod
----

当需要密钥解密属性文件的内容时，安全属性占位符会询问Mule的系统属性文件，该文件使用Ops Admin输入的内存中的密钥。

== 占位符，键和保管库

在Mule中，您可以设置Placeholder-Vault-Key关系的多种变体。

[NOTE]
本主题介绍全球元素的概念;如果您不熟悉此功能，请在继续之前访问 link:/mule-user-guide/v/3.7/global-elements[了解全球骡子元素]以了解更多信息。

=== 一对一关系

第一种变化是简单的一对一关系，如下图所示。
一个全局安全属性占位符的配置要求使用一个密钥来解锁一个凭证保险库。 （换句话说，一个密钥会解密一个属性文件中的属性。）在运行时使用密钥解锁和解密，任何必须访问属性文件中的数据的流都可以这样做。

image:one-one-one.png[一一一]

=== 一对一关系

第二种变化是一对一的关系，如下图所示。
一个全局安全属性占位符的配置要求使用一个密钥来解锁许多凭证库。 （换句话说，一个密钥会解密许多属性文件中的属性。）在运行时使用密钥解锁和解密，任何必须访问任何属性文件中的数据的流都可以这样做。

image:one-one-many.png[一一对多]

=== 多个一对一关系

只要为每个属性文件分配了不同的键，就会创建一个需要多个一对一关系的情况。如下图所示，每个全局安全属性占位符仅使用一个密钥，而该密钥反过来只解锁一个凭证保险库。 （换句话说，每个密钥只能解密一个属性文件中的属性。）在运行时使用多个密钥解锁和解密，任何必须访问任何属性文件中的数据的流都可以这样做。

image:multiple-one-one.png[多一对一]

== 使用Mule凭证保险库

要使用Mule凭证保险库，您必须执行三项任务：

. 加密属性文件中的属性。
. 在您的Mule应用程序中创建一个全局安全属性占位符，以使用Mule在运行时收集的加密密钥。
. 配置Mule的系统属性文件以在运行时请求密钥。

以下各节介绍如何完成这三项任务。

=== 加密属性

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. In Studio, right-click the `src/main/resources` folder, then select *New* > *File*.
. In the *New File* wizard, enter a *Filename*, including the `.properties` extension. For example, `test.properties`.
. Click *Finish*. Studio saves the new, blank file in your project and opens a new window in a *Properties File Editor* window.
+
image:test_properties2.png[test_properties2]
+
. Click the image:error.png[error png] in the `.properties` tab to close the Properties File Editor window.
. In the Package Explorer, right-click the `.properties` file, then select *Open With* > *Mule Properties Editor*.
. Click the green image:add.png[(plus)] icon in the Studio toolbar (see the image below) to open the *Add a new property* dialog.
+
image:add_new_prop.png[add_new_prop]
+
. Add the key-value pair (property) you wish to record in the properties file. 
+
image:add_key-value.png[add_key-value]
+
. If you want to save the property as an unencrypted key-value pair, simply click *OK* to add the new property to the properties file. Essentially, this produces an unencrypted properties file. However, if you wish to encrypt the properties file (that is, creates a Credentials Vault), click the *Encrypt* button.
. Studio opens a *Setup encryption information* dialog, in which you:
** Select the type of *algorithm* you wish to use to encrypt the value.
** Enter the *key* that Mule requires when asked to decrypt the value.
+
[TIP]
====
*Don't Forget the Key!*

The key that you enter to encrypt the properties file is the _same key_ that the administrator enters at runtime. Be sure to keep this key secure and pass it to the administrator(s) who deploys and runs your Mule application.

image:setup_encryption.png[setup_encryption]

====
+
. Click *OK* to complete the encryption.
. In the *Add a new property* dialog, Studio displays the encrypted value in the *Value* field (see below). Click *OK* to save the property.
+
image:encrypted_value.png[encrypted_value]
+
. Repeat steps 6 - 11 to add many properties to your Credentials Vault.
+
Note that the first time you add an encrypted a property to a properties file, Mule demands that you enter the key. The next time you add an encrypted property to the same properties file, Mule uses the key you entered and does not demand it again. Mule remembers the key (in-memory store) for the duration of your Studio session; when you end your session (that is, closes Studio), Mule "forgets" the key.
+
[TIP]
====
You can add unencrypted properties to a properties file. In the properties file, an encrypted property is indecipherable, but recognizable by its wrapper.

[cols="2*"]
|===
|encrypted property |`Username=![r8weir09458riwe0r9484oi]`
|unencrypted property |`Username=Aaron Martinez`
|===
====
....
[tab,title="XML Editor or Standalone"]
....
Encrypt the properties in your `.properties` file.

[TIP]
====
*Don't Forget the Key!*

The key that you use to encrypt the properties file is the _same key_ that the administrator enters at runtime. Be sure to keep this key secure and pass it to the administrator(s) who deploys and runs your Mule application.
====
....
------

=== 设置全局安全属性占位符

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. In Studio, create a new global *Secure Property Placeholder* element.
. Configure the field values of the global element according to the table below. 
+
image:global_secure.png[global_secure]
+
[%header,cols="30a,10a,60a"]
|===
|Field |Req'd |Value
|*Name* |x |A unique name for your global secure property placeholder.
|*Key* |x |the word or phrase to unlock the Credentials Vault according to the system property you define in this field. For example, `${production.myproperty}` instructs Mule to demand the key at runtime.
|*Location* |  |The name of the properties file that the key unlocks.
|*Encryption Algorithm* |  |The type of algorithm you used to encrypt the content of the Credentials Vault.
|*Encryption Mode* |  |The procedure that allows Mule to repeatedly use a block cipher with a single key.
|===
....
[tab,title="XML Editor or Standalone"]
....
. Create a new global *secure-property-placeholder:config* element in your config file, set above all the flows in the application.
. Configure the attributes of the global element according to the table below. 
+
[source, xml, linenums]
----
<secure-property-placeholder:config name="Secure_Property_Placeholder" key="${production.myproperty}" location="test.properties" encryptionAlgorithm="Blowfish" doc:name="Secure Property Placeholder"/> 
----

[%header,cols="30a,10a,60a"]
|===
|Attribute |Req'd |Value
|*name* |x |A unique name for your global secure property placeholder.
|*key* |x |the word or phrase to unlock the Credentials Vault according to the system property you define in this field. For example, `${production.myproperty}` instructs Mule to demand the key at runtime.
|*location* |  |The name of the properties file that the key unlocks.
|*encryptionAlgorithm* |  |The type of algorithm you used to encrypt the content of the Credentials Vault. +
[TIP]
--
The algorithms supported are:

* AES
* Blowfish
* Camelia
* CAST5
* CAST6
* DES
* DESede
* Noekeon
* RC3
* RC5
* RC6
* Rijndael
* RSA
* SEED
* Serpent
* Skipjack
* TEA
* Twofish
* XT
--
|*encryptionMode* |  |The procedure that allows Mule to repeatedly use a block cipher with a single key. +
[TIP]
--
The modes supported are:

* CBC
* CFB
* ECB
* OFB
--
|*doc:name* |  |A display name for the element in Studio's Visual Editor. Not applicable for Standalone.
|===
....
------

=== 配置Mule来请求密钥

建议不要将秘密加密密钥值存储到任何文件的磁盘中。相反，运行管理员应该在启动部署应用程序的Mule运行时，手动将这些秘密属性输入到命令行命令中。

[source, code]
----
./mule -M-Dprod.key=uniquepassword -M-Denv=prod
----

在CloudHub中，Operations Administrator可以将每个环境名称/值对输入到应用程序部署配置的“属性”选项卡中。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. During development time, for testing purposes, you can store these values in the application configuration. In Studio, access the `src/main/app` folder, then double-click the `mule-app.properties` file to open it.
. Add the following Java system environment properties to this configuration file:
+
[source, code, linenums]
----
prod.key=uniquepassword
env=prod
----
+
. Save your changes to the file, then close.

....
[tab,title="XML Editor or Standalone"]
....
. Open your project's `mule-app.properties` file.
. To this system properties file, add the following properties.
+
. Save your changes to the file, then close.
+
[NOTE]
====
Alternatively, instead of changing this file you can add these properties to your command line command when executing Mule.

[source, code]
----
./mule -M-Dprod.key=uniquepassword -M-Denv=prod
----
====
....
------

注：默认情况下，安全属性占位符模块将加密密钥设置为JVM参数。

当您将秘密加密密钥作为JVM参数包含时，Mule会将该值存储在`$MULE_HOME/conf/wrapper-additional.conf`文件中。请务必保护对此文件的访问，以避免危及您的加密安全属性。如果使用MMC，则秘密加密密钥值也会显示在服务器的“属性”选项卡中的多个位置，因此请务必保护对此MMC视图的访问。

管理命令（例如UN * X中的`ps`命令或Windows中的`tasklist`命令）列出了用于启动Mule运行时的所有JVM参数，包括秘密加密密钥值，因此应该访问这些命令也仅限于受信任的管理员。

虽然这些场景满足大多数用例，但在某些情况下，您需要隐藏操作系统其他用户的秘密加密密钥值，也就是说，您不能将秘密加密密钥显示为JVM参数，因为它是任何有权访问该进程的人都可以看到。

解决方案是实现一个自定义安全属性占位符，它可以以不同方式读取加密密钥，例如从位于受保护文件夹中的文件读取加密密钥。此自定义实施必须扩展`org.mule.modules.security.placeholder.SecurePropertyPlaceholderModule`。

==== 使用自定义安全属性占位符

为简单起见，以下示例实现显示了`SecurePropertyPlaceholderModule`的自定义实现，该实现从属于应用程序类路径一部分的名为`keyfile.properties`的文件中提取加密密钥。这可以很容易地适应从文件系统中的任何位置读取文件，尤其是从受到良好保护的文件夹中读取文件。

[source, code, linenums]
----
package com.mulesoft.training.esbops.security;

import java.io.IOException;
import java.util.Properties;

import org.mule.modules.security.placeholder.SecurePropertyPlaceholderModule;
import org.mule.util.IOUtils;

public class CustomSecurePropertyPlaceholderModule extends SecurePropertyPlaceholderModule {

	public void setKeyFilePath(String keyFilePath) throws IOException {
		Properties prop = new Properties();
		prop.load(IOUtils.getResourceAsStream(keyFilePath, this.getClass()));
		super.setKey(prop.getProperty("secure.key"));
	}

}
----

接下来，将一个`spring:bean`元素添加到您的项目中以实例化此自定义安全属性占位符模块。附加元素`<spring:property name="keyFilePath" value="keyfile.properties" />`告诉自定义安全属性占位符在哪里查找`secure.key`值。

[source, code, linenums]
----
<spring:beans>
   <spring:bean id="secure-property-placeholder" class="security.CustomSecurePropertyPlaceholderModule">
      <spring:property name="encryptionAlgorithm" value="Blowfish" />
      <spring:property name="encryptionMode" value="CBC" />
      <spring:property name="keyFilePath" value="keyfile.properties" />
      <spring:property name="location" value="secure.properties" />
      <spring:property name="ignoreUnresolvablePlaceholders" value="true" />
  </spring:bean>
</spring:beans>
----

请注意，此自定义安全属性占位符中的代码行`prop.load(IOUtils.getResourceAsStream(keyFilePath, this.getClass()));`将其`keyFilePath`设置为`<spring:property name="keyFilePath" value="keyfile.properties" />`元素中设置的值。在这个例子中，文件`keyfile.properties`必须位于Mule服务器的类路径中。或者，该值可以是Mule运行时计算机上受保护文件夹的绝对路径。

代码行`super.setKey(prop.getProperty("secure.key"));`会在`keyFilePath`中发现的第一个匹配文件内查找名为`secure.key`的属性。

== 用例示例

一家公司已经构建了一个连接到Salesforce API的Mule应用程序。该应用程序为其所有用户存储Salesforce登录凭据。开发应用程序的开发人员必须能够测试Salesforce连接功能，但不能访问用户的Salesforce帐户信息。因此，该应用程序有两个属性文件，一个用于应用程序的生产环境，另一个用于开发人员测试功能。

*  `test.prod.properties`（Salesforce是生产环境的关键）
*  `test.dev.properties`（沙箱环境）
+
test.prod.properties文件将加密内容存储在Mule凭证库中; test.dev.properties文件将未加密的信息存储在属性文件中。因为`${env}`是属性名称的一部分，所以在运行Mule时需要为其指定值，这将确定要读取的属性。
+
* 在生产运行时，Mule应用程序使用在系统属性中定义的密钥来解锁凭证保险库。这允许应用程序中的Mule流利用凭证保险库中的属性登录到Salesforce（请参阅下面的安全属性占位符配置）。 secure-property-placeholder元素自动标识环境（`${env}`）并访问Mule凭证库（test.prod.properties文件）以获取正版证书。
+
[source, xml]
----
<secure-property-placeholder:config key="${prod.key}" location="test.${env}.properties"/>
----
+
[TIP]
这里使用的属性名称（例如，`${prod.key}`和`test.${env}.properties`）在这里用作示例，您可以使用您选择的任何其他属性名称。

* 在沙箱的运行时，系统属性中不需要提供任何密钥，因为`test.dev.properties`文件未加密。 secure-property-placeholder元素自动标识哪些属性未加密，并以纯文本格式返回它们。

由于开发人员没有`prod.key`值（即运行时密码，也是访问Credentials Vault的关键），因此他们无法访问`test.prod.properties`文件中的安全Salesforce登录凭据。唯一知道`prod.key`的人是将应用程序部署到生产环境中的运营团队负责人。

当Ops Team Lead启动Mule运行时时，潜在客户必须为凭证保险库提供`prod.key`的值（请参阅下面的命令）。 Mule接受`prod.key`在Ops Team Lead的Mule会话期间有效。该值不会保存在磁盘上的任何位置，因此下次运行应用程序时`prod.key`不可用;而是必须再次将`prod.key`手动输入到内存中。

[source, code]
----
./mule -M-Dprod.key=uniquepassword -M-Denv=prod
----

== 另请参阅

* 访问演示Anypoint Enterprise Security的 link:/mule-user-guide/v/3.7/anypoint-enterprise-security-example-application[示例应用]。




